Updated layout including navbars and footer. Added Mantine UI library.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Ponder - Magic: The Gathering Companion</title>
   </head>
   <body>
-    <div id="root" class="flex h-screen flex-col"></div>
+    <div id="root" class="flex h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
